# akfa-vpn

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pytest.ini
akfa-docs-platform/: .env.example  .gitignore  README.md  README_DEPLOY.md  next.config.mjs  package-lock.json  package.json  (+2 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_traffic_online_fields.py  0003_access_profile_blocked_domains.py  0004_node_metrics.py  0005_user_node_access.py  0006_user_node_traffic.py  0007_node_config_apply_status.py  0008_hwid_devices_totp_import.py  0009_pending_totp_secret.py  0013_hwid_hard_mode.py  0014_node_traffic_snapshots_nullable_user.py  0015_public_help_links.py  0016_ssh_fingerprint_encrypted_totp.py
backend/app/: cli.py  constants.py  main.py
backend/app/api/: auth.py  deps.py  entities.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: auth.py  common.py  entities.py
backend/app/services/: access_profiles.py  audit.py  backup.py  config_apply.py  connect_messages.py  domain_lists.py  hwid.py  node_action_jobs.py  reality.py  scheduler.py  server_metrics.py  ssh_host_keys.py  ssh_installer.py  subscription_settings.py  subscriptions.py  traffic.py  xray_config.py  xray_probe.py
backend/tests/: conftest.py  test_auth.py  test_connect_messages.py  test_entities.py  test_server_metrics.py  test_ssh_host_keys.py  test_traffic.py  test_xray_and_subscriptions.py
(+82 files in other folders)
