[project]
name = "akfa-backend"
version = "0.1.0"
description = "AKFA VPN access management backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "asyncssh>=2.14.2",
    "cryptography>=42.0.8",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "email-validator>=2.2.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.3.4",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
